<resources>
    <string name="app_name">SaMessenger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!-- TODO: AppHomeFragment  -->
    <!-- logout Material Dialog -->
    <string name="fragment_app_home_material_dialog_logout_message">Do you want to logout from your account?</string>
    <string name="fragment_app_home_material_dialog_logout_title">notice</string>
    <string name="fragment_app_home_material_dialog_logout_positive_button">Yes</string>
    <string name="fragment_app_home_material_dialog_logout_negative_button">Cancel</string>

    <!--////////////////////////-->


    <!-- TODO: ProfileDataFragment  -->

    <!-- edittext hints -->
    <string name="fragment_profile_edittext_firstname_hint">Firstname</string>
    <string name="fragment_profile_edittext_lastname_hint">Lastname</string>
    <string name="fragment_profile_edittext_username_hint">Username</string>
    <string name="fragment_profile_edittext_email_hint">Email</string>

    <!-- button texts -->
    <string name="fragment_profile_button_change_password_text">Change Password</string>

    <!--settingProfilePic-->
    <string name="fragment_profile_set_profpic_toast_not_selected">Nothing selected</string>
    <string name="fragment_profile_set_profpic_toast_uploading_failed">Failed to upload</string>



</resources>